--- a/security/pubspec.yaml
+++ b/security/pubspec.yaml
@@ -27,6 +27,11 @@ dependencies:
   firebase_auth: ^0.15.4
   provider: ^4.0.0
   loading_animations: ^2.1.0
+  fab_menu: ^0.0.2
+
+
+
+  
   
 
 
@@ -66,17 +71,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/RobotoSlab/static/RobotoSlab-Regular.ttf
+         
+          #style: regular
+      
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
